Bug 1674080 - Add some required includes to the bindings generator. r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D95147