dom/bindings/Codegen.py
@@ -16205,6 +16205,7 @@ class CGDescriptor(CGThing):
                 elif m.getExtendedAttribute("Replaceable"):
                     cgThings.append(CGSpecializedReplaceableSetter(descriptor, m))
                 elif m.getExtendedAttribute("LenientSetter"):
+                    # XXX In this case, we need to add an include for mozilla/dom/Document.h to the generated cpp file.
                     cgThings.append(CGSpecializedLenientSetter(descriptor, m))
                 if (
                     not m.isStatic()
@@ -17982,7 +17983,9 @@ class CGBindingRoot(CGThing):
     """
 
     def __init__(self, config, prefix, webIDLFile):
-        bindingHeaders = dict.fromkeys(("mozilla/dom/NonRefcountedDOMObject.h",), True)
+        bindingHeaders = dict.fromkeys(
+            ("mozilla/dom/NonRefcountedDOMObject.h", "MainThreadUtils.h"), True
+        )
         bindingDeclareHeaders = dict.fromkeys(
             (
                 "mozilla/dom/BindingDeclarations.h",
@@ -18021,6 +18024,27 @@ class CGBindingRoot(CGThing):
             d.interface.isIteratorInterface() or d.interface.isIterable()
             for d in descriptors
         )
+
+        def memberNeedsSubjectPrincipal(d, m):
+            if m.isAttr():
+                return (
+                    "needsSubjectPrincipal" in d.getExtendedAttributes(m, getter=True)
+                ) or (
+                    not m.readonly
+                    and "needsSubjectPrincipal"
+                    in d.getExtendedAttributes(m, setter=True)
+                )
+            return m.isMethod() and "needsSubjectPrincipal" in d.getExtendedAttributes(
+                m
+            )
+
+        if any(
+            memberNeedsSubjectPrincipal(d, m)
+            for d in descriptors
+            for m in d.interface.members
+        ):
+            bindingHeaders["mozilla/BasePrincipal.h"] = True
+            bindingHeaders["nsJSPrincipals.h"] = True
 
         # The conditions for which we generate profiler labels are fairly
         # complicated. The check below is a little imprecise to make it simple.
@@ -23108,6 +23132,7 @@ class CGEventRoot(CGThing):
             [
                 "%s.h" % interfaceName,
                 "js/GCAPI.h",
+                "mozilla/HoldDropJSObjects.h",
                 "mozilla/dom/Nullable.h",
             ],
             "",
